Yaml-Scripts/ingress-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway 
metadata:
  name: ingress-gateway
  namespace: istio-system
spec: 
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: istio-ingressgateway-certs # must be the same as the secret created in the previous task
      privateKey: sds.key
      serverCertificate: sds.crt
    hosts:
    - "*"
